--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 // Open Streets Map Layer
 
-var map = L.map('map').setView([40.7128,-74.0060], 4); // CHANGE LATER!
+var map = L.map('map').setView([39.113014,-105.358887], 4); // CHANGE LATER!
 var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 });
@@ -148,20 +148,20 @@ L.geoJSON(statesData).addTo(map);
 
 // color of state dependent on quantity
 function getColor(d) {
-    return d > 1000 ? '#800026' :
-           d > 500  ? '#BD0026' :
-           d > 200  ? '#E31A1C' :
-           d > 100  ? '#FC4E2A' :
-           d > 50   ? '#FD8D3C' :
-           d > 20   ? '#FEB24C' :
-           d > 10   ? '#FED976' :
-                      '#FFEDA0';
+    return d > 1000 ? '#12025c' :
+           d > 500  ? '#19008a' :
+           d > 200  ? '#0000FF' :
+           d > 100  ? '#1F1FFF' :
+           d > 50   ? '#4949FF' :
+           d > 20   ? '#7879FF' :
+           d > 10   ? '#A3A3FF' :
+                      '#BFBFFF';
 }
 
 // dashed for states' border
 function style(feature) {
     return {
-        fillColor: getColor(feature.properties.density),
+        fillColor: getColor(feature.properties.symptoms),
         weight: 2,
         opacity: 1,
         color: 'white',
@@ -227,8 +227,8 @@ info.onAdd = function (map) {
 
 // method that we will use to update the control based on feature properties passed
 info.update = function (props) {
-    this._div.innerHTML = '<h4>US Population Density</h4>' +  (props ?
-        '<b>' + props.name + '</b><br />' + props.density + ' people / mi<sup>2</sup>'
+    this._div.innerHTML = '<h4>US Cold Symptoms from Tweets</h4>' +  (props ?
+        '<b>' + props.name + '</b><br />' + props.symptoms + ' cold symptoms identified'
         : 'Hover over a state');
 };
 
